--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,8 @@
 
-.ilimage{
-  border-radius: 20px;
-}
 .button-collapse {
   color: #26a69a;
 }
 
-.parallax-container {
-  min-height: 500px;
-  line-height: 0;
-  height: auto;
-  /*color: rgba(255,255,255,.9);*/
-}
-  .parallax-container .section {
-    width: 100%;
-  }
 
 @media only screen and (max-width : 992px) {
   .parallax-container .section {
@@ -78,7 +66,7 @@ header section, .media, .pick-your-own {
 
 header section:first-child, .products{
   background:
-    url('../images/buds.jpeg');
+    url('https://hemiblue.com/images/buds.jpeg');
   background-size: cover;
 }
 
@@ -95,6 +83,22 @@ header img {
   border-radius: 10px;
 }
 
+.portfolio{
+  clear: both;
+}
+.portfolio-holder{
+  clear: both;
+  text-align: center;
+  display: grid;
+  grid-auto-flow: dense;
+  grid-template-columns: 1fr 1fr;
+  gap: 20px;
+}
+
+.row-2{
+  grid-row: span 2 / auto;
+}
+
 @media only screen and (min-width: 650px) {
   header, .pick-your-own {
     min-height: 100vh;
@@ -107,5 +111,8 @@ header img {
     height: 100vh;
     align-items: center;
     display: flex;
+  }
+  .portfolio-holder{
+    grid-template-columns: 1fr 1fr 1fr;
   }
 }
