--- a/css/style.css
+++ b/css/style.css
@@ -83,9 +83,6 @@ header img {
   border-radius: 10px;
 }
 
-.portfolio{
-  clear: both;
-}
 .portfolio-holder{
   clear: both;
   text-align: center;
@@ -93,6 +90,10 @@ header img {
   grid-auto-flow: dense;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
+}
+
+.portfolio-holder img {
+  max-width: 100%;
 }
 
 .row-2{
