deleting old styles and adding some for products

--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,3 @@
-
-.button-collapse {
-  color: #26a69a;
-}
-
-
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
-  #logo {
-    width: 40%;
-    margin-top: -120px;
-  }
-  .tagline{
-  font-size: 1.7em;
-  }
-}
-
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
-  #logo {
-    width: 70%;
-  }
-  .tagline{
-  font-size: 1em;
-  }
-}
-
-/* redesign styles */
 * {
   font-family: 'verdana', 'sans-serif';
   color: #1f2273;
@@ -41,37 +5,30 @@
 body {
   margin: 0;
 }
-
 p {
   font-size: 18px;
 }
 header {
   text-align: center;
 }
-
-header section, .media, .pick-your-own {
+header section, .media, .pick-your-own, .products {
   padding: 10px;
 }
-
-header section:first-child, .products{
+header section:first-child{
   background:
     url('https://hemiblue.com/images/buds.jpeg');
   background-size: cover;
 }
-
 h3{
   text-shadow: 3px 3px midnightblue;
   color: white;
 }
-
 header img {
   max-width: 100%;
 }
-
 .splide__slide__container {
   border-radius: 10px;
 }
-
 .portfolio-holder{
   clear: both;
   text-align: center;
@@ -80,19 +37,15 @@ header img {
   grid-template-columns: 1fr 1fr;
   gap: 20px;
 }
-
 .portfolio-holder img {
   max-width: 100%;
 }
-
 .row-2{
   grid-row: span 2 / auto;
 }
-
 .column-2{
   grid-column: span 2 / auto;
 }
-
 @media only screen and (min-width: 650px) {
   header, .pick-your-own {
     min-height: 100vh;
@@ -105,6 +58,7 @@ header img {
     height: 100vh;
     align-items: center;
     display: flex;
+    justify-content: center;
   }
   .portfolio-holder{
     grid-template-columns: 1fr 1fr 1fr;
