--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,12 @@ header img {
     grid-gap: 10px;
     align-items: center;
   }
+  .media {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: center;
+  }
   header section {
     height: 100vh;
     align-items: center;
