--- a/css/style.css
+++ b/css/style.css
@@ -82,4 +82,51 @@ header img {
   .portfolio-holder{
     grid-template-columns: 1fr 1fr 1fr;
   }
+  .modal-content .modalgrid {
+    display: grid;
+    grid-template-columns: 3fr 4fr;
+    grid-gap: 15px;
+  }
+}
+/* modal stuff */
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+.modal-content {
+  background-color: #fff;
+  margin: 15% auto; 
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  text-align: center;
+}
+
+
+.modal-content img {
+  max-width: 100%;
+}
+
+/* The Close Button */
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
