--- a/css/style.css
+++ b/css/style.css
@@ -108,12 +108,14 @@ header img {
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
+  height: 80%;
   text-align: center;
 }
 
 
 .modal-content img {
   max-width: 100%;
+  max-height: 100%;
 }
 
 /* The Close Button */
