modal height and width

--- a/css/style.css
+++ b/css/style.css
@@ -107,8 +107,8 @@ header img {
   margin: 15% auto; 
   padding: 20px;
   border: 1px solid #888;
-  width: 80%;
-  height: 80%;
+  max-width: 80vw;
+  max-height: 85vh;
   text-align: center;
 }
 
