--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ header img {
 }
 .card {
   box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.12), 0 1px 5px 0 rgba(0, 0, 0, 0.2);
-  padding: 0.5rem;
+  padding: .2rem 1.5rem 1.5rem;
   background: #fff;
   margin: 0.5rem 0;
   border-radius: 2px;
